@@ -6,6 +6,10 @@ This document contains the release notes for recent major releases of Sirius. Se
 
 h2(#sirius6.3.0). Changes in Sirius 6.3.0
 
+h3. User-Visible Changes
+
+* <span class="label label-success">Added</span> It is now possible to move labels on border of node, or border node, all around the node. Before, for label larger than the node, only centered location was authorized on North or South side. On this maintenance release of Sirius, this feature needs a "flag" to be activated. If you want to benefit of this feature, you need to add the VM arg "-Dorg.eclipse.sirius.experimental.labelOnBorderImprovement=true". This feature needs an automatic migration of representations file. This is why it is not activated by default on this maintenance release. 
+
 h3. Specifier-Visible Changes
 
 * <span class="label label-success">Added</span> A new column @Target@ has been added in the dialog allowing to choose layout options to override for ELK layout algorithms. It describes the element to which the option applies. The filter textfield in that dialog also applies on columns& @Name@, @Targets@ and @Type@.
